# DeepShowerSim

./: .gitignore  .gitmodules  README
0-Generation/: CMakeLists.txt  generate.cc
0-Generation/include/: ActionInitialization.hh  AnalysisHelper.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
0-Generation/macro/: init_vis.mac  run-100GeV  run-100GeV.mac  run-50GeV.mac  run-uniform-1-100-GeV.mac  run_e+_50GeV.mac  run_gamma_50GeV.mac  run_pi+_50GeV.mac  test-100GeV.mac  vis.mac
0-Generation/src/: ActionInitialization.cc  AnalysisHelper.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
1-Training/proj-discrimination-with-energy/: dataset.py  main.py  model.py
1-Training/torch4hep/: __init__.py  conv_utils.py
1-Training/torch4hep/dataset/: __init__.py  base.py  pbwo4.py
1-Training/torch4hep/modules/: conv2dlocal.py
